--- a/src/components/activity/activity.css
+++ b/src/components/activity/activity.css
@@ -60,6 +60,18 @@ div.hr100.paper {
     max-width: 200px;
     display: inline-block;
 }
+.metrics{
+    width: 100%;
+    height:24px;
+}
+
+.pull-left {
+    float: left;
+}
+
+.pull-right {
+    float: right;
+}
 
 section span {
     margin-left: 12px;
